Commiting from VS Code

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a14f98b6-c31f-420a-a719-a98769d4b4bf",
    "metadata": {
     "editable": true,
@@ -73,7 +73,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "df = pd.DataFrame({ \"name\": [\"Ruchit\", \"Kaushik\", \"Sangoi\"], \"score\": np.random.randint(70, 100, size=3) })\n",
+    "df = pd.DataFrame({ \"name\": [\"Ruchit\", \"Rashmi\", \"Kaushik\"], \"score\": np.random.randint(70, 100, size=3) })\n",
     "\n",
     "df"
    ]
